objects/TW1_Emprestimo__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Data_da_Devolucao__c</fullName>
        <label>Data da Devolução</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_do_Emprestimo__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Data do Empréstimo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Dependente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependente</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Esse cliente não possui dependentes cadastrados.</errorMessage>
            <filterItems>
                <field>TW1_Dependente__c.TW1_Conta_Associada__c</field>
                <operation>equals</operation>
                <valueField>$Source.TW1_Nome_do_Cliente__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TW1_Dependente__c</referenceTo>
        <relationshipLabel>Empréstimos</relationshipLabel>
        <relationshipName>Empr_stimos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.TW1_Tipo_de_Emprestimo__c</field>
                <operation>equals</operation>
                <valueField>TW1_Item__c.TW1_Tipo__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.TW1_Shopping__c</field>
                <operation>equals</operation>
                <valueField>TW1_Item__c.TW1_Shopping__c</valueField>
            </filterItems>
            <filterItems>
                <field>TW1_Item__c.TW1_Status__c</field>
                <operation>equals</operation>
                <value>Vago</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>TW1_Item__c</referenceTo>
        <relationshipLabel>Empréstimos</relationshipLabel>
        <relationshipName>Empr_stimos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_Cliente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nome do Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Empréstimos</relationshipLabel>
        <relationshipName>Empr_stimos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Empréstimos</relationshipLabel>
        <relationshipName>Empr_stimos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Em uso</fullName>
                    <default>true</default>
                    <label>Em uso</label>
                </value>
                <value>
                    <fullName>Devolvido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo_de_Emprestimo__c</fullName>
        <label>Tipo de Empréstimo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cadeira de Rodas</fullName>
                </value>
                <value>
                    <fullName>Cadeira de Rodas motorizada</fullName>
                </value>
                <value>
                    <fullName>Carregador Portátil</fullName>
                </value>
                <value>
                    <fullName>Carrinho de Bebê</fullName>
                </value>
                <value>
                    <fullName>PetCar</fullName>
                </value>
                <value>
                    <fullName>Armário</fullName>
                </value>
                <value>
                    <fullName>Sala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Empréstimo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Data_do_Emprestimo__c</columns>
        <columns>TW1_Item__c</columns>
        <columns>TW1_Nome_do_Cliente__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Código do Empréstimo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Empréstimos</pluralLabel>
    <recordTypes>
        <fullName>Armario</fullName>
        <active>true</active>
        <label>Armário</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cadeira_de_Rodas</fullName>
        <active>true</active>
        <label>Cadeira de Rodas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cadeira_de_Rodas_motorizada</fullName>
        <active>true</active>
        <label>Cadeira de Rodas motorizada</label>
    </recordTypes>
    <recordTypes>
        <fullName>Carregador_Portatil</fullName>
        <active>true</active>
        <label>Carregador Portátil</label>
    </recordTypes>
    <recordTypes>
        <fullName>Carrinho_de_Bebe</fullName>
        <active>true</active>
        <label>Carrinho de Bebê</label>
    </recordTypes>
    <recordTypes>
        <fullName>PetCar</fullName>
        <active>true</active>
        <label>PetCar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sala</fullName>
        <active>true</active>
        <label>Sala</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TW1_VR_Emprestimo_Solicita_Data_Devolu</fullName>
        <active>false</active>
        <description>Se o status for alterado para devolvido o sistema solicita data de devolução.</description>
        <errorConditionFormula>ISCHANGED(TW1_Status__c) &amp;&amp; ISPICKVAL(TW1_Status__c, &apos;Devolvido&apos;) &amp;&amp; ISNULL(TW1_Data_da_Devolucao__c)</errorConditionFormula>
        <errorMessage>Favor preencher data de devolução.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Emprestimo_Solicita_status</fullName>
        <active>false</active>
        <description>A data de devolução só deve ser preenchida com o status igual a devolvida.</description>
        <errorConditionFormula>NOT(ISNULL(TW1_Data_da_Devolucao__c)) &amp;&amp; ISPICKVAL(TW1_Status__c,&quot;Em uso&quot;)</errorConditionFormula>
        <errorMessage>Se a data de devolução for preenchida alterar o status para Devolvido.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_VR_Emprestimo_Valida_status_item</fullName>
        <active>true</active>
        <description>Verifica se o item selecionado está com o status de Locado, caso positivo impede o salvamento solicitando um item vago.</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED(TW1_Item__c)) &amp;&amp; ISPICKVAL(TW1_Item__r.TW1_Status__c, &apos;Locado&apos;)</errorConditionFormula>
        <errorMessage>Não é possível vincular um item com status de locado a um empréstimo já existente, por favor selecione um item vago.</errorMessage>
    </validationRules>
</CustomObject>